--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,13 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+
+    /* brand */
+  --color-themeBlueColor: #014478;
+  --color-themeOrangeColor: #FB7540;
+  --color-headingColor: #151515;
+  --color-darkBorderColor: rgba(1,68,120,.2);
+  --color-lightColor: rgba(255,255,255,.8);
 }
 
 @media (prefers-color-scheme: dark) {
