--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,8 +15,9 @@
   --color-themeBlueColor: #014478;
   --color-themeOrangeColor: #FB7540;
   --color-headingColor: #151515;
-  --color-darkBorderColor: rgba(1,68,120,.2);
   --color-lightColor: rgba(255,255,255,.8);
+  --color-borderColor: rgba(1,68,120,.1);
+  --color-darkBorderColor: rgba(1,68,120,.2);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -29,7 +30,7 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-rubik-sans);
 }
 
 html {
@@ -131,4 +132,17 @@ input:-webkit-autofill:focus{
 }
 @media (min-width: 1536px) {
   .appContainer { max-width: 1400px; }
+}
+
+.font-playfair { font-family: var(--font-playfair), ui-serif, Georgia, 'Times New Roman', serif; }
+
+.getInsights:before {
+    content: "";
+    position: absolute;
+    left: 20px;
+    bottom: -20px;
+    width: 100%;
+    height: 46px;
+    background-color: rgba(255, 255, 255, .1);
+    z-index: -1;
 }
