--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -146,3 +146,11 @@ input:-webkit-autofill:focus{
     background-color: rgba(255, 255, 255, .1);
     z-index: -1;
 }
+
+.blueSVG img {
+    filter: invert(11%) sepia(87%) saturate(4793%) hue-rotate(194deg) brightness(86%) contrast(103%);
+}
+
+.blueSVG:hover img {
+    filter: invert(99%) sepia(0%) saturate(7497%) hue-rotate(229deg) brightness(96%) contrast(105%);
+}
